--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ bio:                'personal blog'
 description:        "Sybil's blog."
 reading_time:       true
 words_per_minute:   200
-logo:               'assets/img/logo.png'
+logo:               'assets/img/logo.jpg'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
@@ -12,7 +12,7 @@ url:                https://sybil63.github.io
 
 # Jekyll
 permalink:          /:title/
-markdown:           kramdown
+markdown:           monokai
 highlighter:        rouge
 kramdown:
   auto_ids:         true
@@ -37,25 +37,25 @@ disqus_shortname:   taylantatli
   #ad-client:
   #ad-slot:
 #bing-verify:
-#email:
-twitter:            username
-facebook:           username
-github-url:         username
+email:            sybil_0603@163.com
+#twitter:            username
+#facebook:           username
+github-url:         sybil63
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
-instagram:          username
+#instagram:          username
 #lastfm:            username
 #tumblr:            username
 #medium:            '@username'
 #pinterest:         username
 #foursquare:        username
-steam:              username
+#steam:              username
 #dribbble:          username
 #youtube:           username
 #youtube-channel:   channel
 #soundcloud:        username
-#weibo:             username
+weibo:             __sybil
 #flickr:            username
 #codepen:           username
 #keybase:           username
